--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your entire site, values
-# which you are expected to set up once and rarely need to edit after that.
+# which you are expected to set up once and rarely need to edit after that. 
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve -l -H localhost`. If you change this file, please restart the 
 # server process.
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Lina Lee"
   pronouns         : # example: "she/her"  
   bio              :  "I am a Ph.D. candidate in the Department of Statistics at Virginia Tech.
   My research focuses on Deep Learning in survival Analysis and machine learning."
 
   In my free time, I enjoy hiking and cycling.
-  location         : "Earth"
+  location         : "Columbia, MO"
   employer         : "Red Brick University"
   uri              : # URL
   email            : "none@example.org" 
