--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Lina Lee"
   pronouns         : # example: "she/her"  
-  bio              :  "I am a Ph.D. candidate in the Department of Statistics at Virginia Tech.
-  My research focuses on Deep Learning in survival Analysis and machine learning."
+  bio              :  "I am a Ph.D. candidate in the Department of Statistics at Virginia Tech.  My research focuses on Deep Learning in survival Analysis and machine learning.   In my free time, I enjoy hiking and cycling."
 
-  In my free time, I enjoy hiking and cycling.
+
   location         : "Columbia, MO"
   employer         : "Red Brick University"
   uri              : # URL
