--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ author:
 
 
   location         : "Columbia, MO"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  employer         : "Virginia Tech"
+#  uri              : # URL
+#  email            : "none@example.org" 
 
   # Academic websites
  # arxiv            : # URL - Update with the correct link to your profile
@@ -62,7 +62,7 @@ author:
   #keybase          : # Username
   #instagram        : # Username
   #lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : https://www.linkedin.com/in/lina-lee-statistics/
   #mastodon         : # URL
   #medium           : # URL
   #pinterest        : # Username
