--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Lina Lee / Homepage"
 title_separator          : "-"
 name                     : &name "Lina Lee"
-description              : &description "Ph.D. Candidate Department of Statistics Virginia Tech sdbarnett@vt.edu"
+description              : &description "Ph.D. Candidate Department of Statistics Virginia Tech"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
@@ -37,7 +37,7 @@ author:
  # arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
  # impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+ # orcid            : "http://orcid.org/yourorcidurl"
  # semantic         : # URL
 #  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
  # researchgate     : # URL
@@ -62,7 +62,7 @@ author:
   #keybase          : # Username
   #instagram        : # Username
   #lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/lina-lee-statistics/
+  linkedin         : lina-lee-statistics/
   #mastodon         : # URL
   #medium           : # URL
   #pinterest        : # Username
