--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author:
 
   # Academic websites
  # arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=ORSPCTEAAAAJ&hl=ko&oi=sra"
  # impactstory      : # URL
  # orcid            : "http://orcid.org/yourorcidurl"
  # semantic         : # URL
