--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "https://linal20.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "linal20_profile.png"
   name             : "Lina Lee"
   pronouns         : # example: "she/her"  
   bio              :  "I am a Ph.D. candidate in the Department of Statistics at Virginia Tech.  My research focuses on Deep Learning in survival Analysis and machine learning.   In my free time, I enjoy hiking and cycling."
